[package]
name = "nu_plugin_tick"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "nu_plugin_tick"

[dependencies]
nu-plugin = { git = "https://github.com/nushell/nushell.git", branch = "main" }
nu-protocol = { git = "https://github.com/nushell/nushell.git", branch = "main", features = ["plugin"] }

